--- a/posts/2015-01-15.md
+++ b/posts/2015-01-15.md
@@ -80,7 +80,7 @@ fn pagerank<G: EdgeMapper>(graph: &G, nodes: u32, alpha: f32) {
 }
 ```
 
-I'm not going to say very much about whether this is a good pagerank implementation. There are [better versions](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.59.5449), but everyone uses this algorithm for benchmarking
+I'm not going to say very much about whether this is a good pagerank implementation. There are [better versions](https://www.microsoft.com/en-us/research/publication/a-uniform-approach-to-accelerated-pagerank-computation/), but everyone uses this algorithm for benchmarking
 to ensure they are measuring their system's performance, not the algorithm's. This is textbook PageRank, no bells, no whistles.
 
 Label propagation is basically just as simple. For those of you unfamiliar with the algorithm, each node maintains a label, and repeatedly improves it by asking their neighbors if they have a smaller label. This is run until convergence, at which point all nodes in the same component have the same label.
@@ -175,7 +175,7 @@ The Hilbert implementation of `EdgeMapper` is similar to our prior implementatio
 *   `graph.upper` contains a sequence of `((u16, u16), u32)` values, each a 65536x65536 square indicating the upper 16 bits of x and y, followed by the number of edges in the square. These entries are ordered by the order their corresponding squares are visited by the curve.
 *   `graph.lower` contains a sequence of `(u16, u16)` values for the lower 16 bits for each edge. These entries are ordered by the the order the curve visits them when traversing their square.
 
-The `EdgeMapper` implementation is basically identical to the implementation for vertex-order above, but results in improved PageRank running times. One lesson is that PageRank is essentially memory-bound; the time is spent either thrashing the TLB or waiting for results from the memory controller, rather than the CPU or disk. It scales because each machine offers an indepedent memory controller. Instead, you can partially fix the problem by re-arranging memory accesses like we have done here.  You could also use [huge pages](http://en.wikipedia.org/wiki/Page_(computer_memory)#Huge_pages) (the C# code does), which I can't do yet on OS X.
+The `EdgeMapper` implementation is basically identical to the implementation for vertex-order above, but results in improved PageRank running times. One lesson is that PageRank is essentially memory-bound; the time is spent either thrashing the TLB or waiting for results from the memory controller, rather than the CPU or disk. It scales because each machine offers an independent memory controller. Instead, you can partially fix the problem by re-arranging memory accesses like we have done here.  You could also use [huge pages](http://en.wikipedia.org/wiki/Page_(computer_memory)#Huge_pages) (the C# code does), which I can't do yet on OS X.
 
 We should also admit that the Hilbert curve ordering is not typically how graphs are presented, and consequently there would be some work involved in transforming your input data to this ordering. If you are only planning on doing one computation, it may not be worth the effort. Fortunately, a single-threaded implementation takes less time to re-order the edges (about 180s in Rust) than any of the systems above take to perform 20 iterations of PageRank. It's included in the repository.
 
@@ -226,7 +226,7 @@ We'll use graph connectivity as our example, from label propagation to our faste
 |   8.0s | Pre-fetching `root[x]` and `root[y]` before the while loop |
 
 
-Note, these numbers differ from those reported above due to being a totally different implementation. Mainly, the first measurements took advantage of large pages, which do not seem to be exist on OS X. This benefit is largely recouped by using the Hilbert ordering, which also eases pressure on the TLB. The custom EdgeMapper re-uses a small buffer, and likely messes up the TLB less than mmap does.
+Note, these numbers differ from those reported above due to being a totally different implementation. Mainly, the first measurements took advantage of large pages, which do not seem to exist on OS X. This benefit is largely recouped by using the Hilbert ordering, which also eases pressure on the TLB. The custom EdgeMapper re-uses a small buffer, and likely messes up the TLB less than mmap does.
 
 ## Take-aways
 
