--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -576,3 +576,164 @@ I'm not entirely sure what is wrong with the larger graph, in that the join impl
 Looking at a profile, the large graph `1000000 x 1` experiment spends only 6% of its time in `join` at all, so the serious regression seems unlikely to live there. I don't think I've changed `group` in the meantime, so I'm not exactly sure what is screwed up; perhaps I tweaked the measurement program inappropriately, or perhaps I caught a dodgy measurement the previous time around (when there was, in fairness, a buggy join implementation).
 
 For the small graph, the bulk of the time is now spent in `group`, in some operations that may still have some defective performance (sorting mostly, it seems; technically super-linear). It would be great to get performance to improve with increasing batch size before starting to optimize the implementations.
+
+### Addendum: Simplifying "interesting times" (March 31, 2017)
+
+One complicated bit of logic in `group` determines the logical times at which we may need to re-evaluate user logic. It is not so much complicated, as much as I made it complicated. The logic is meant to take two sets of times, `old` and `new` let's say, and determine the times that are the lattice join of a subset of `old` and a non-empty subset of `new`.
+
+For example, here is the reference implementation that I wrote (here `edits` is the old set and `times` is the new set):
+
+```rust
+// REFERENCE IMPLEMENTATION (LESS CLEVER)
+let times_len = times.len();
+for position in 0 .. times_len {
+    for &(_, ref time, _) in edits {
+        if !time.le(&times[position]) {
+            let join = time.join(&times[position]);
+            times.push(join);
+        }
+    }
+}
+
+let mut position = 0;
+while position < times.len() {
+    for index in 0 .. position {
+        if !times[index].le(&times[position]) {
+            let join = times[index].join(&times[position]);
+            times.push(join);
+        }
+    }
+    position += 1;
+    times[position..].sort();
+    times.dedup();
+}
+```
+
+It does a bunch of work, much more than the possibly linear-time implementation I worked hard on. Of course, it is so much simpler (by about 80 lines, and many loops), and we should probably just use it when we don't have lots of edits. Because often we don't have lots of edits.
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   58s (62s) | 55s (56s) |    38s (38s) |
+| 10000 x 100 |   56s (59s) | 46s (47s) |    30s (32s) |
+| 100000 x 10 |   67s (69s) | 35s (36s) |    23s (23s) |
+| 1000000 x 1 |   74s (73s) | 31s (32s) |    23s (21s) |
+
+These are pretty minor effects, with some light improvement in the smaller batch sizes where we expect less complicated histories. I was initially really excited about this because I conflated the improvements with the next optimization, but once I broke them apart this was not the better part. Sorry!
+
+### Addendum: Avoiding expensive hashing (March 31, 2017)
+
+What actually makes a difference is ripping out a fair amount of redundant hashing. Our default storage uses hash tables to index data by key, which is really helpful when we have relatively few keys in each batch. At the same time, our default implementation just calls each types associated hash function when it needs a hash, which can be quite a lot.
+
+In particular, when we first arrange data into batches we sort it (by key, then value, then time), and while this is primarily a radix sort using the hash, we need to finish it with a standard Rust sort to deal with possible hash collisions and to get values and times ordered too. If we have lots of data, and especially if we have lots of equivalent keys, this ends up calling the hash function on the key quite a lot.
+
+There is a small change we can make to cache the hash value; doing that doesn't seem to help all that much; it probably makes sorting faster but then costs later on when we need to move around keys and hash values together. This is worth looking into more, because if you show up with long `String` keys you aren't going to want lots of hash re-evaluation.
+
+A simple change, for the purposes of graphs, is to use random node identifiers and have each identifier be its own hash value. This works out great, and we get generally improved performance:
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   51s (58s) | 51s (55s) |    31s (38s) |
+| 10000 x 100 |   51s (56s) | 38s (46s) |    25s (30s) |
+| 100000 x 10 |   60s (67s) | 28s (35s) |    19s (23s) |
+| 1000000 x 1 |   66s (74s) | 24s (31s) |    17s (23s) |
+
+This recovers a fair chunk of time we lost previously, and this difference could actually be the source of the apparent regression (perhaps I was using this version before; I certainly have in the past).
+
+One question this raises is whether we really need hash tables as the index structure. They are helpful for sparse access, but if our plan is to push hard on throughput, perhaps simple ordered lists are good enough. They are much simpler to construct, and very cheap to merge. They would likely kill the numbers for small batch sizes, effectively raising the "minimum latency" you would experience for small loads. This will also be fun to check out, though. 
+
+Plus we are actually going to put real indices in place at some point, which should make the distinction less important.
+
+We still have an up-tick for increasing batch sizes in the small graph, and I still want to sort that out. Removing all this hashing is one way of getting rid of the noise that is leaving the source of the problem a mystery.
+
+### Addendum: Re-engineering `group` (April 2, 2017)
+
+I did a bit of a re-write of the core `group` logic. Not much has changed algorithmically, but certain parts were tidied up enough that we spend less time futzing around with messy piles of data.
+
+For example, previously the operator accepted batches of keyed input data, and for each key flipped through all times to create a list of `(key, time)` pairs we should look into. That's great, but we didn't really need to do that; we can just wait until we start to work on the key, and put together the list of times for that key. This required a bit of sanity checking about "exactly what times are we planning on working on" that was enabled by the simplified code structure.
+
+We also bite off a larger chunk of the graph to work on, doing only one sweep through the keys where we may previously have done several, feeding the output into different batches as appropriate (when we have multiple incomparable capabilities).
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   45s (51s) | 57s (51s) |    44s (31s) |
+| 10000 x 100 |   39s (51s) | 43s (38s) |    30s (25s) |
+| 100000 x 10 |   48s (60s) | 29s (28s) |    19s (19s) |
+| 1000000 x 1 |   55s (66s) | 20s (24s) |    12s (17s) |
+
+Some interesting things happen here. The small graph performance improves a fair bit, the very large batch performance improves quite a bit (more on this), and the small batch large graph performance takes a bit of a hit. I'm not exactly sure what the deal is here, except that we are doing more work in larger batches now, and this provides both opportunities to do things well and to do things badly.
+
+I want to call out the large graph, multiple worker numbers. There is a pretty serious improvement there, which is even more impressive when you learn that the first 4.5 second are just prepping the computation (loading the graph and doing the initial bfs computation). So what we are actually seeing appears to by 12s of compute down to 8s of compute. I just need to do that a few more times. Also, make sure to run integration test to see that we are producing the correct output (ed: apparently).
+
+### Addendum: Less interesting times (April 7, 2017)
+
+I made what I think of as a pretty substantial change to the way `group` works. Let me recap, both because it gets us on the same page, and because I need the practice.
+
+The `group` operator works on a bunch of keys in parallel, and for our purposes we are just going to talk about what it does for each key individually (it maps this behavior across all keys). 
+
+The `group` operator repeatedly gets presented with batches of updates each of which corresponds to an *interval* of partially ordered time: `[lower, upper)`, where `lower` and `upper` are both antichains (sets whose elements are mutually incomparable) and the interval includes those times greater or equal to an element of `lower` but not greater or equal to any element of `upper`. 
+
+When presented with an interval of updates, the `group` operator is now in a position to determine the corresponding interval of updates to its output. All of the inputs updates at times not after `upper` have been locked in, and this means that mathematically that all of the output updates at times not after `upper` are also locked in, we just haven't computed them yet. So the `group` operator needs to determine the output updates at times in the interval `[lower, upper)`.
+
+The previous implementation did this by tracking all of the times at which the output might change, and each time around seeing which of these times are in the interval `[lower, upper)` and working on those times. This was intended to be very precise, but it has some serious overhead and, counter-intuitively, can end up less precise that simpler methods.
+
+The current implementation (this is all a work in progress) just takes as input `lower` and `upper`, and starts looking for times that land in this interval. A time is plausibly interesting, in that it could possibly have a non-zero output update, if it is the join of sets of times found in input or output updates. As we are (currently) planning on walking through all updates anyhow (to "simulate" the history of the values for the key), we have the opportunity to start forming these sets of joined things and seeing which land in our target interval.
+
+Although we might consider lots of times, each time will either be (i) in the `[lower, upper)` interval, in which case we want to reconsider it, or (ii) at `upper` or beyond, in which case we should defer it for future processing. We can also skip any times in the future of defered times, because we'll just re-discover them when we get to them in the future, right?
+
+Or will we?
+
+This is meant to be the "good news" of this approach: if in the future it turns out that the updates that prompted some possibly interesting time vanish, perhaps because they cancel when seen from this point in the future, then great! Although we thought it might be worth looking in to what the input and output look like at that time, if by the time we get to the interval containing the time the updates just aren't there any more, no work for us to do!
+
+Let's look at an example: Imagine we are supplying one thousand rounds of input to an iterative computation, so timestamps look like `(round, iteration)`. We might start with updates that look like 
+
+	("hello", (17, 0), +1)
+	("world", (23, 0), +1)
+
+Meaning that `"hello"` shows up in the 17th round of input and `"world"` shows up in the 23rd round of input. Perhaps over the course of the iterative computation, the `"world"` record evolves a bit and eventually goes away
+
+	("world", (23, 3), -1)
+
+Of course, `"hello"` can evolve too, and perhaps in a later iteration it prompts something exciting:
+
+	("wombat", (17, 5), +1)
+
+This is very exciting, because wombats are magical animals. Now, based on our tradition reasoning, in addition to our general excitement about wombats we may also come to the conclusion that the time `(23, 5)` is pretty interesting. Some stuff happens at `(_, 5)`, and some stuff happens at `(23, _)`, so stuff probably happens at `(23, 5)` that we should check out.
+
+As it turns out, nothing happens at `(23, 5)`, because by the time we've gotten to iteration five, the `"world"` updates have canceled with each other. The input collection is identical to the collection at `(23, 4)` and at `(22, 5)` and even at `(22, 4)`, which pretty much means that it doesn't experience change and so its output doesn't change either.
+
+Our prior implementations, each of which tracked all possibly interesting times explicitly, would miss this opportunity because they flagged the times `(17,3)` and `(19,3)` as interesting, and lost track of the fact that their reasons for being interesting cancel each other out. When we arrive at `(23, 0)` we would be warned about the excitement associated with `(19, 3)` and 
+
+So that's all a very nice hypothetical optimization, but what does it do for our `bfs` computation?
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   40s (45s) | 59s (57s) |    45s (44s) |
+| 10000 x 100 |   39s (39s) | 45s (43s) |    31s (30s) |
+| 100000 x 10 |   49s (48s) | 30s (29s) |    20s (19s) |
+| 1000000 x 1 |   55s (56s) | 18s (20s) |    11s (12s) |
+
+Not a great deal. There is a little bit of movement, but I think most of it is attributable to noise. 
+
+This is sort of good news, because we haven't actually put the optimization of ignoring canceling times into place yet, we are just seeing how well we do when we have to rediscover times in each `[lower, upper)` interval rather than having them listed for us. We removed a fair amount of "time management" code, at the possible cost of re-evaluating the user logic at more times than strictly necessary. Though, practically, I'm not sure we actually do any more evaluation this way, as we were fairly conservative about which times we would consider previously (in that we considered quite a lot).
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   40s (40s) | 59s (57s) |    42s (45s) |
+| 10000 x 100 |   36s (39s) | 44s (45s) |    30s (30s) |
+| 100000 x 10 |   46s (49s) | 30s (30s) |    20s (20s) |
+| 1000000 x 1 |   56s (55s) | 18s (18s) |    10s (11s) |
