--- a/posts/2017-10-27.md
+++ b/posts/2017-10-27.md
@@ -28,7 +28,7 @@ The "federated" learning approach does away with the centralized store of inform
 
 The CCS 2015 paper proposes federated learning as a privacy-friendly way to do machine learning. Roughly, they propose to do distributed stochastic gradient descent, where each participant has the option to randomly discard some of their parameter updates, and to obscure them with differential privacy if that is your sort of thing.
 
-> Our key technical innovation is the selective sharing of model parameters during training. This parameter sharing, interleaved with local parameter updates during stochastic gradient descent, allows participants to benefit from other participants’ models without ex- plicit sharing of training inputs. Our approach is independent of the specific algorithm used to construct a model for a particular task. Therefore, it can easily accommodate future advances in neural-network training without changing the core protocols.
+> Our key technical innovation is the selective sharing of model parameters during training. This parameter sharing, interleaved with local parameter updates during stochastic gradient descent, allows participants to benefit from other participants’ models without explicit sharing of training inputs. Our approach is independent of the specific algorithm used to construct a model for a particular task. Therefore, it can easily accommodate future advances in neural-network training without changing the core protocols.
 
 To summarize their claims about this approach, let me quote them again:
 
@@ -38,19 +38,19 @@ This paragraph sounds pretty sweet, but it starts to get at where the authors ge
 
 Unfortunately, nothing I have read in their paper suggests that you can't just read the source data (photos, let's say) back out of the gradients that the participants report. Weren't those gradients *not* the data? As it turns out, for at least one of the deep learning network topologies some of the gradients are just scaled versions of your input after all.
 
-#### Multi-layer perceptron
+#### Multilayer perceptron
 
-One of the models that the authors consider is the [multilayer perceptron](https://en.wikipedia.org/wiki/Multilayer_perceptron), which connects multiple perceptrons (details in a moment) into a larger, deeper network. Each individual perceptron works by taking a collection of source signals, think real-valued numbers like maybe pixel intensities, multiplying each source signal by some weight, and then adding up the results. If you think of the input signals as high-dimensional vector, the perceptron does its classification by taking an inner product with a vector of weights. These weights are the model parameters, and they are what need to be updated if it turns out the model isn't yet doing a good job.
+One of the models that the authors consider is the [multilayer perceptron](https://en.wikipedia.org/wiki/Multilayer_perceptron), which connects multiple [perceptrons](https://en.wikipedia.org/wiki/Perceptron) (details in a moment) into a larger, deeper network. Each individual perceptron works by taking a collection of source signals, think real-valued numbers like maybe pixel intensities, multiplying each source signal by some weight, and then adding up the results. If you think of the input signals as high-dimensional vector, the perceptron does its classification by taking an inner product with a vector of weights. These weights are the model parameters, and they are what need to be updated if it turns out the model isn't yet doing a good job.
 
 A *multilayer* perceptron is a bunch of perceptrons stacked in layers, typically with some non-linear function applied to the aggregation (like [the logistic function](https://en.wikipedia.org/wiki/Logistic_function)). This allows the multilayer perceptron to learn interesting non-linear functions of the input data. Of course, we still have to attach some first layer of perceptrons to the image itself; note: multiple perceptrons attached to the input (e.g. pixels).
 
 So, how does the multilayer perceptron gradient update work? Mostly commonly through [backpropagation](https://en.wikipedia.org/wiki/Backpropagation). Backpropagation is an approach for training networks where you supply an input, observe the activations it produces (the inner products then non-linear functions, for each layer), and then check the result the network produces against the output you wanted (e.g. "picture of Frank, or of goat?"). There will probably be some error, so you then propagate the error *backwards*, updating the weights that you used to take the inner products to make the inner product larger when you need larger and smaller when you need smaller. How do you do that? Usually, you add some multiple (positive or negative) of the vector of activations.
 
-This is all great abstractly, but if your input is an image those "activations" are the pixels of your input image, just scaled a bit to indicate just how happy you were with the result you saw (e.g. "more of my image!" or "less of my image!"). Up to that one scaling factor, the gradients *are* your image.
+This is all great abstractly, but if your input is an image the those "activations" for the input layer are the pixels of your input image, just scaled a bit to indicate just how happy you were with the result you saw (e.g. "more of my image!" or "less of my image!"). Up to that one scaling factor, the gradients for the input layer *are* your image.
 
-You could drop out all but 1% of the parameter updates, as the authors propose, so now you are only revealing 1% of the pixels in your image for each perceptron update. Unfortunately, the multilayer perceptron is "fully connected", which means that there are several perceptrons attached to your image, and each of them are going to be updating their weights with some multiple of your input image. If you have 100 such internal nodes, then dropping 1% of the gradient updates leaves you with about 1/e of your pixels revealed. The ambiguous scaling factor doesn't save you either, because there are likely to be pixels in common, and you can solve for the scaling that was applied.
+You could drop out all but 1% of the parameter updates, as the authors propose, so now you are only revealing 1% of the pixels in your image for each perceptron update. Unfortunately, the multilayer perceptron is "fully connected", which means that there are several perceptrons attached to your image, and each of them are going to be updating their weights with some multiple of your input image. If you have 100 such internal nodes, then dropping 1% of the gradient updates still leaves you with about 1/e of your pixels revealed. The ambiguous scaling factor doesn't save you either, because there are likely to be pixels in common, and you can solve for the scaling that was applied.
 
-Gradient updates can reveal much of your source data in the clear. Just dropping a few of the updates doesn't help.
+Gradient updates can reveal much of your source data in the clear. Just dropping a few of the updates doesn't help. Note that the above isn't a demonstration of an attack, which would be much clearer about whether I am making this up, but it should at least convince you that "releasing gradients, not data" is not especially indirect leakage.
 
 #### Differential privacy
 
@@ -72,7 +72,7 @@ Also, this is only the per-epoch differential privacy cost. They run multiple (u
 
 #### Conclusions
 
-I don't think the techniques the authors propose provide "privacy", in any sense other than that you don't directly reveal your naughty photos to everyone. Except you mostly do, if you use the multilayer perceptron. The "fractions of gradients reported" is probably not a valuable privacy quantification, in that the multilayer perceptron gives each pixel multiple chances to be revealed, and what we probably want is the total number of parameters updated. The "per-parameter differential privacy" guarantee is similarly problematic, in that you still have to multiply by the number of parameters revealed each epoch, and then by the number of epochs (which are not reported).
+I don't think the techniques the authors propose provide "privacy", in any sense other than that you don't literally directly reveal your naughty photos to everyone, which might remove some of the social awkwardness. Except that you mostly do, if you use the multilayer perceptron. The "fractions of gradients reported" is probably not a valuable privacy quantification, in that the multilayer perceptron gives each pixel multiple chances to be revealed, and what we probably want is the total number of parameters updated. The "per-parameter differential privacy" guarantee is similarly problematic, in that you still have to multiply by the number of parameters revealed each epoch, and then by the number of epochs (which are not reported).
 
 This sounds a bit grim, so I'm happy to slot in any further illumination the authors would like to provide. It is possible that I've misread something, of course. If the "negligible utility loss" comes with either "releasing pixels in the clear" or "10,550.6 differential privacy", it doesn't seem like a great trade-off yet.
 
@@ -90,9 +90,9 @@ Perhaps susceptible means "may or may not be a violation", in the same way that 
 
 #### The attack
 
-The attack of CCS 2017 is conceptually relatively simple: they install an adversary as a participant, whose job it is to learn representative examples from one of the classes the honest participants are trying to learn. For example, if you all have pictures and are trying to learn "cat" versus "dog", the adversary picks one of "cat" or "dog" and uses [Generative Adversarial Networks](https://en.wikipedia.org/wiki/Generative_adversarial_network) (GAN) techniques to learn representative examples of that class.
+The attack of CCS 2017 is conceptually relatively simple: they install an adversary as a participant, whose job it is to learn representative examples from one of the classes that the honest participants are trying to learn. For example, if you all have pictures and are trying to learn "cat" versus "dog", the adversary picks one of "cat" or "dog" and uses [Generative Adversarial Networks](https://en.wikipedia.org/wiki/Generative_adversarial_network) (GAN) techniques to learn representative examples of that class.
 
-At this point the authors of CCS 2017 announce success, because it could be that you are the only person with pictures labeled "dog" and you really wanted to keep them secret. And it actually *could* be that this is the case, and you would be upset.
+At this point the authors of CCS 2017 announce success, because it could be that you are the only person with pictures labeled "dog" and you really wanted to keep them secret. And it actually *could* be that this is the case, and you would be right to be upset.
 
 There are a few issues with this line of reasoning.
 
@@ -110,7 +110,7 @@ What I think they should have said is
 
 > Our attack works whenever the model *must* accurately classify a class and will generate representatives of that class.
 
-What the authors show, and it is a not-unreasonable thing to observe, is that an *over-fitting* federated learning approach, one that can be relied upon to continue to fit a single-example class to exhaustion, can be encouraged by an adversary to reveal a detailed view of individual examples, for those examples in isolated classes. Experimentally, CCS 2017 shows that CCS 2015 is such an over-fitting learning approach, and ACM CSS generally *should* learn never to do such a thing ever again.
+What the authors show, and it is a not-unreasonable thing to observe, is that an *over-fitting* federated learning approach, one that can be relied upon to continue to fit a single-member class to exhaustion, can be encouraged by an adversary to reveal a detailed view of members isolated in their own classes. Experimentally, CCS 2017 shows that CCS 2015 is such an over-fitting learning approach, and ACM CSS generally *should* learn never to do such a thing ever again.
 
 This is however a far cry from their claim that
 
